# CroCoDeEL

./: .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: mirror_gitlab.yml  publish_crocodeel.yml
conda_env/: environment.yml
conda_recipe/: meta.yaml
crocodeel/: __init__.py  ab_table_utils.py  common.py  conta_event.py  conta_features.py  contamination_case.py  contamination_plots_report.py  crocodeel.py  crocodeel_parallel.py  easy_wf.py  execution_description.py  main.nf  nextflow.config  plot_conta.py  ressources.py  rf_model.py  run.sh  search_conta.py  test_install.py  train_model.py  utils.py
crocodeel/backup/: write_parameters_file.py
crocodeel/models/: crocodeel_rf_Feb2026.joblib  crocodeel_rf_Feb2026_2.joblib  crocodeel_rf_Mar2023.joblib
crocodeel/pythonScript/: build_samples_list.py  crocodeel.py  crocodeel_parallel.py  filter_contamination_results_by_plate.py  filter_contamination_results_if_longitudinal_samples.py  plot_contamination_cases.py  write_summary_report.py
crocodeel/test_data/results/: contamination_events.tsv
crocodeel/workflow/: crocodeel.nf
test/: mgs_profiles_test.tsv
test/results/: contamination_results.txt  parameters.ini  summary_report.ini
