[tool.poetry]
name = "crocodeel"
version = "1.0.6"
description = "CroCoDeEL is a tool that detects cross-sample (aka well-to-well) contamination in shotgun metagenomic data"
authors = [
    "Lindsay Goulet <lindsay.goulet@inrae.fr>",
    "Florian Plaza Oñate <florian.plaza-onate@inrae.fr>",
    "Edi Prifti <edi.prifti@ird.fr>",
    "Eugeni Belda <eugeni.belda@ird.fr>",
    "Emmanuelle Le Chatelier <emmanuelle.le-chatelier@inrae.fr>",
    "Guillaume Gautreau <guillaume.gautreau@inrae.fr>",
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["Metagenomics"]
repository = "https://github.com/metagenopolis/CroCoDeEL"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{ include = "crocodeel" }]


[tool.poetry.scripts]
crocodeel = "crocodeel.crocodeel:main"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2"
numpy = "^1.26"
joblib = "^1.4"
scipy = "^1.13"
scikit-learn = "~1.3"
matplotlib = "^3.8"
tqdm = "^4.66"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.10"
pandas-stubs = "^2.2"
types-tqdm = "^4.66"

[tool.poetry.group.pylint.dependencies]
pylint = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
