[tool.poetry]
name = "crocodeel"
version = "1.1.1"
description = "CroCoDeEL is a tool that detects cross-sample (aka well-to-well) contamination in shotgun metagenomic data"
authors = [
    "Lindsay Goulet <lindsay.goulet@inrae.fr>",
    "Florian Plaza Oñate <florian.plaza-onate@inrae.fr>",
    "Edi Prifti <edi.prifti@ird.fr>",
    "Eugeni Belda <eugeni.belda@ird.fr>",
    "Emmanuelle Le Chatelier <emmanuelle.le-chatelier@inrae.fr>",
    "Guillaume Gautreau <guillaume.gautreau@inrae.fr>",
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["Metagenomics"]
repository = "https://github.com/metagenopolis/CroCoDeEL"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{ include = "crocodeel" }]


[tool.poetry.scripts]
crocodeel = "crocodeel.crocodeel:main"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.3"
numpy = "^2.4"
joblib = "^1.5"
scipy = "^1.17"
scikit-learn = "^1.8"
matplotlib = "^3.10"
tqdm = "^4.67"
pyarrow = ">=16.0.0"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.19"
pandas-stubs = "^2.3"
types-tqdm = "^4.67"

[tool.poetry.group.pylint.dependencies]
pylint = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
